<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Clock</string>
    <!--添加闹钟-->
    <string name="cancel">取消</string>
    <string name="add">存储</string>
    <string name="addclock">添加闹钟</string>
    <string name="repeat">重复</string>
    <string name="tag">标签</string>
    <string name="music">铃声</string>
    <string name="tips">稍后提醒</string>
    <string name="vibrator">振动</string>
    <string name="phonemusic">电话铃声</string>
    <string name="none">无</string>
    <string name="back">返回</string>
    <string name="forover">永不</string>
    <string name="clock">闹钟</string>
    <string name="leida">Argon</string>
    <string name="standrad">标准</string>
    <string name="lunch">上午</string>
    <string name="delete">删除</string>

    <!--计时器-->
    <string name="jisuan">计算结束时启用</string>
    <string name="start">开始计时</string>
    <string name="goon">继续</string>
    <string name="pause">暂停</string>
    <string name="timertitle">计时结束时启用</string>
    <string name="set">设定</string>
    <string name="timerstop">停止播放</string>

    <!--秒表和计时器-->
    <string name="dot">计次</string>
    <string name="reset">复位</string>
    <string name="lunach">启动</string>
    <string name="stop">停止</string>
</resources>
